Added title, input field, submit button

--- a/index.html
+++ b/index.html
@@ -15,8 +15,11 @@
     <body>
         <div class="container">
             <div class="row">
-                // Your HTML HERE
+                <h1>Pig Latinizer</h1>
+                <input placeholder = "Input text here">
+                <button id="submit">Submit</button>
                 
+                <p></p>
                 
             </div>
         </div>
